Fix x overflow on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 svg {
   max-width: 20px;
   width: 1rem;
